deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dmlogn8n
  labels:
    name: dmlogn8n
    environment: production
